--- a/content/news
+++ b/content/news
@@ -1,1 +1,1 @@
-/home/hamdy/code/github/threefoldfoundation/data_threefold/content/news/
+~/code/github/threefoldfoundation/data_threefold/content/news/
